[gd_scene load_steps=4 format=3 uid="uid://caskgqeghvvs8"]

[ext_resource type="Script" uid="uid://dnuwkw73m1nsm" path="res://Shop System/purchase_line_slider.gd" id="1_mugr1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mugr1"]
content_margin_bottom = 15.0

[sub_resource type="Theme" id="Theme_3mprn"]
HSlider/styles/slider = SubResource("StyleBoxEmpty_mugr1")

[node name="PurchaseLineSlider" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 38.0
offset_bottom = 18.0
theme = SubResource("Theme_3mprn")
script = ExtResource("1_mugr1")

[node name="GrayLine" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.437763, 0.437763, 0.437763, 1)

[node name="RedLine" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="GreenLine" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="TickContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
